tests/ui/expected-char.stderr
error: #[opt = '…'] requires a character
 --> $DIR/expected-char.rs:5:5
  |
5 |     #[opt = 0]
  |     ^
